// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderDiagnostic > should handle errors on the first character 1`] = `
"error[CHT004]: unexpected character: @
 --> <source>:1:1
  |
 1 | @foo;
  | ^
  |"
`;

exports[`renderDiagnostic > should handle single-character span 1`] = `
"error[CHT004]: unexpected character: !
 --> <source>:1:9
  |
 1 | let x = !;
  |         ^
  |"
`;

exports[`renderDiagnostic > should render a single-line error with underline 1`] = `
"error[CHT201]: undefined variable 'foo'
 --> <source>:1:9
  |
 1 | let x = foo;
  |         ^^^
  |"
`;

exports[`renderDiagnostic > should render a warning 1`] = `
"warning[CHT900]: unknown quantity unit 'bananas'
 --> <source>:1:9
  |
 1 | let x = 5bananas;
  |         ^^^^^^^^^
  |"
`;

exports[`renderDiagnostic > should render an error with a suggestion 1`] = `
"error[CHT103]: empty dictionary must use {:} syntax
 --> <source>:1:9
  |
 1 | let d = {};
  |         ^^
  |         = help: use {:} instead of {}
  |"
`;

exports[`renderDiagnostic > should render with a custom file name 1`] = `
"error[CHT201]: undefined variable 'foo'
 --> hello.chute:1:9
  |
 1 | let x = foo;
  |         ^^^
  |"
`;

exports[`renderDiagnostic > should render with color when enabled 1`] = `
"[1m[31merror[CHT201][0m[1m: undefined variable 'foo'[0m
 [34m-->[0m <source>:1:9
  [34m|[0m
 [34m1[0m [34m|[0m let x = foo;
  [34m|[0m         [1m[31m^^^[0m
  [34m|[0m"
`;

exports[`renderDiagnostic > should render with correct line and column numbers 1`] = `
"error[CHT201]: undefined variable 'foo'
 --> <source>:3:9
  |
 3 | let c = foo;
  |         ^^^
  |"
`;

exports[`renderDiagnostics > should render a summary line 1`] = `
"error[CHT201]: undefined variable 'foo'
 --> <source>:1:9
  |
 1 | let x = foo;
  |         ^^^
  |
error[CHT200]: cannot assign Text to Number
 --> <source>:3:4
  |
 3 | y = "hi";
  |    ^^^^
  |
warning[CHT900]: unknown quantity unit 'bananas'
 --> <source>:2:2
  |
 2 | var y = 5;
  |  ^^^^^
  |
2 errors, 1 warning emitted
"
`;

exports[`renderDiagnostics > should render multiple diagnostics separated by blank lines 1`] = `
"error[CHT201]: undefined variable 'foo'
 --> <source>:1:9
  |
 1 | let x = foo;
  |         ^^^
  |
error[CHT201]: undefined variable 'bar'
 --> <source>:2:9
  |
 2 | let y = bar;
  |         ^^^
  |
2 errors emitted
"
`;
